BTC Track v1.3 - Voice Selector Config

--- a/btc/index.html
+++ b/btc/index.html
@@ -220,6 +220,29 @@
             margin-bottom: 15px; /* Space before buttons */
         }
 
+        /* New styles for arranging label and input/select on the same row */
+        .modal-content .config-item-row {
+            display: flex;
+            align-items: center; /* Vertically aligns label and the input/select */
+            margin-top: 15px;    /* Standard spacing from the element above */
+            /* margin-bottom will be handled by the next element's margin-top or can be added if needed */
+        }
+
+        .modal-content .config-item-row label {
+            display: inline;     /* Override default block display for labels */
+            margin-top: 0;       /* Reset top margin */
+            margin-bottom: 0;    /* Reset bottom margin */
+            margin-right: 10px;  /* Space between label and the input/select */
+            flex-shrink: 0;      /* Prevent label from shrinking */
+        }
+
+        .modal-content .config-item-row select,
+        .modal-content .config-item-row input[type="text"], /* If other inputs were to use this row layout */
+        .modal-content .config-item-row input[type="number"] {
+            flex-grow: 1;        /* Allow the input/select to take available space */
+            width: auto;         /* Override fixed width calculations */
+            margin-bottom: 0;    /* Reset bottom margin as row handles vertical spacing */
+        }
         .modal-content label {
             display: block;
             margin-top: 15px;
@@ -229,7 +252,8 @@
 
         .modal-content input[type="text"],
         .modal-content input[type="number"],
-        .modal-content input[type="color"] { /* Added color input styling */
+        .modal-content input[type="color"],
+        .modal-content select { /* General styling for select elements in modal */
             width: calc(100% - 20px);
             padding: 10px;
             margin-bottom: 10px;
@@ -394,6 +418,11 @@
             <label for="googleApiKey">Google API Key (for Insights):</label>
             <input type="text" id="googleApiKey" placeholder="Enter your Google API Key">
 
+            <div class="config-item-row"> <!-- Wrapper for same-line layout -->
+                <label for="voiceSelect">Voice:</label>
+                <select id="voiceSelect"></select>
+            </div>
+
             <label for="accentColorPicker">Accent Color:</label>
             <input type="color" id="accentColorPicker">
 
@@ -451,6 +480,7 @@
         const userBtcAmountInput = document.getElementById('userBtcAmount');
         const userTotalCostInput = document.getElementById('userTotalCost');
         const googleApiKeyInput = document.getElementById('googleApiKey');
+        const voiceSelectEl = document.getElementById('voiceSelect');
         const accentColorPickerEl = document.getElementById('accentColorPicker');
 
         const insightsButtonEl = document.getElementById('insightsButton');
@@ -462,6 +492,19 @@
         const playInsightButtonEl = document.getElementById('playInsightButton');
 
         const DEFAULT_ACCENT_COLOR = '#f7931a';
+        const DEFAULT_VOICE = 'Kore';
+        const AVAILABLE_VOICES = [
+            "Zephyr -- Bright", "Puck -- Upbeat", "Charon -- Informative", "Kore -- Firm",
+            "Fenrir -- Excitable", "Leda -- Youthful", "Orus -- Firm", "Aoede -- Breezy",
+            "Callirrhoe -- Easy-going", "Autonoe -- Bright", "Enceladus -- Breathy",
+            "Iapetus -- Clear", "Umbriel -- Easy-going", "Algieba -- Smooth", "Despina -- Smooth",
+            "Erinome -- Clear", "Algenib -- Gravelly", "Rasalgethi -- Informative",
+            "Laomedeia -- Upbeat", "Achernar -- Soft", "Alnilam -- Firm", "Schedar -- Even",
+            "Gacrux -- Mature", "Pulcherrima -- Forward", "Achird -- Friendly",
+            "Zubenelgenubi -- Casual", "Vindemiatrix -- Gentle", "Sadachbia -- Lively",
+            "Sadaltager -- Knowledgeable", "Sulafat -- Warm"
+        ];
+
         let lastDataFetchTimestamp = null;
         let updateTimestampInterval = null;
         let config = {
@@ -469,6 +512,7 @@
             apiKey: '',
             userBtcAmount: 0.0,
             userTotalCost: 0.0,
+            selectedVoice: DEFAULT_VOICE,
             selectedTimeframe: '24h',
             accentColor: DEFAULT_ACCENT_COLOR,
             insightReport: { // New: For storing the last insight
@@ -479,6 +523,17 @@
                 cachedAudioRequiresWavWrapping: false
             }
         };
+
+        function populateVoiceDropdown() {
+            AVAILABLE_VOICES.forEach(voiceDesc => {
+                const [voiceName, description] = voiceDesc.split(" -- ");
+                const option = document.createElement('option');
+                option.value = voiceName;
+                option.textContent = voiceDesc;
+                if (voiceName === DEFAULT_VOICE) option.selected = true;
+                voiceSelectEl.appendChild(option);
+            });
+        }
 
         function loadConfig() {
             const storedConfig = localStorage.getItem('btcTrackConfig');
@@ -499,9 +554,11 @@
                 userBtcAmountInput.value = config.userBtcAmount || '';
                 userTotalCostInput.value = config.userTotalCost || '';
                 googleApiKeyInput.value = config.googleApiKey || '';
+                voiceSelectEl.value = config.selectedVoice || DEFAULT_VOICE;
                 timeframeSelectEl.value = config.selectedTimeframe || '24h';
                 accentColorPickerEl.value = config.accentColor || DEFAULT_ACCENT_COLOR;
             } else {
+                voiceSelectEl.value = DEFAULT_VOICE;
                 // If no stored config, ensure picker shows default
                 config.insightReport = { content: null, timestamp: null, cachedAudioBase64: null, cachedAudioMimeType: null, cachedAudioRequiresWavWrapping: false };
                 accentColorPickerEl.value = DEFAULT_ACCENT_COLOR;
@@ -515,6 +572,7 @@
             config.userBtcAmount = parseFloat(userBtcAmountInput.value) || 0.0;
             config.userTotalCost = parseFloat(userTotalCostInput.value) || 0.0;
             config.accentColor = accentColorPickerEl.value || DEFAULT_ACCENT_COLOR;
+            config.selectedVoice = voiceSelectEl.value || DEFAULT_VOICE;
             config.googleApiKey = googleApiKeyInput.value.trim();
             // selectedTimeframe is saved via its own event listener
             localStorage.setItem('btcTrackConfig', JSON.stringify(config));
@@ -527,6 +585,7 @@
                 userBtcAmountInput.value = config.userBtcAmount || '';
                 userTotalCostInput.value = config.userTotalCost || '';
                 googleApiKeyInput.value = config.googleApiKey || '';
+                voiceSelectEl.value = config.selectedVoice || DEFAULT_VOICE;
                 accentColorPickerEl.value = config.accentColor || DEFAULT_ACCENT_COLOR;
             }
         }
@@ -829,11 +888,24 @@
                 };
 
                 currentInsightAudio.onerror = (e) => {
-                    console.error("Audio element error (from cache):", e, "Source (first 100 chars):", audioSourceUrl.substring(0,100));
+                    const playAttemptError = e.detail?.originalError; // Check for error passed from oncanplaythrough's catch
+                    const mediaError = currentInsightAudio.error; // Standard HTMLMediaElement error
+                    let errorMessage = "Unknown audio error";
+
+                    if (playAttemptError) {
+                        errorMessage = playAttemptError.message || "Failed to play audio after loading.";
+                        console.error("Audio element error (from cache, play() failed):", playAttemptError, "Source:", audioSourceUrl.substring(0,100));
+                    } else if (mediaError) {
+                        errorMessage = mediaError.message || `MediaError code ${mediaError.code}`;
+                        console.error("Audio element error (from cache, HTMLMediaElement error):", mediaError, "Source:", audioSourceUrl.substring(0,100));
+                    } else {
+                        console.error("Audio element error (from cache, unknown type):", e, "Source:", audioSourceUrl.substring(0,100));
+                    }
+
                     if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
                     if(playInsightButtonEl) playInsightButtonEl.disabled = false;
                     if (isObjectUrl) URL.revokeObjectURL(audioSourceUrl);
-                    alert("Error playing cached audio. Check console. MIME: " + mimeType);
+                    alert("Error playing cached audio. Check console. MIME: " + mimeType + ". Error: " + errorMessage);
                     // Clear potentially faulty cache entry
                     config.insightReport.cachedAudioBase64 = null;
                     config.insightReport.cachedAudioMimeType = null;
@@ -841,9 +913,27 @@
                     localStorage.setItem('btcTrackConfig', JSON.stringify(config));
                 };
 
-                if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop";
-                if(playInsightButtonEl) playInsightButtonEl.disabled = false;
-                currentInsightAudio.play().catch(err => currentInsightAudio.onerror(err)); // Play and catch potential errors
+                if (playInsightButtonEl) { // Set to loading while waiting for canplaythrough
+                    playInsightButtonEl.textContent = "Loading...";
+                    playInsightButtonEl.disabled = true;
+                }
+
+                currentInsightAudio.oncanplaythrough = async () => {
+                    console.log('[DEBUG] Cache: canplaythrough event fired.');
+                    try {
+                        await currentInsightAudio.play();
+                        if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop";
+                        if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                    } catch (playError) {
+                        console.error("Error on play() after canplaythrough (cached):", playError);
+                        if (currentInsightAudio.dispatchEvent) { // Trigger the main onerror handler
+                            const errorEvent = new CustomEvent('error', { detail: { originalError: playError } });
+                            currentInsightAudio.dispatchEvent(errorEvent);
+                        }
+                    }
+                };
+                currentInsightAudio.src = audioSourceUrl;
+                currentInsightAudio.load(); // Call load after setting src and handlers
 
             } catch (error) {
                 console.error("Error preparing cached audio for playback:", error);
@@ -903,7 +993,7 @@
                     responseModalities: ["AUDIO"], // Explicitly request only AUDIO modality
                     speechConfig: { // speechConfig is now nested correctly
                         voiceConfig: {
-                            prebuiltVoiceConfig: { voiceName: "Kore" }
+                            prebuiltVoiceConfig: { voiceName: config.selectedVoice || DEFAULT_VOICE }
                         }
                     }
                 } 
@@ -919,8 +1009,33 @@
 
                 if (!response.ok) {
                     const errorText = await response.text(); // Get raw error text for more info
-                    console.error(`[DEBUG] TTS API response not OK. Status: ${response.status} ${response.statusText}. Response Text: ${errorText}`);
-                    throw new Error(`TTS API Error: ${response.status} ${response.statusText}. Check console for details.`);
+                    console.error(`[DEBUG] TTS API response not OK. Status: ${response.status}. Response Text: ${errorText}`);
+
+                    if (response.status === 429) { // Too Many Requests
+                        try {
+                            const parsedError = JSON.parse(errorText);
+                            const errorInfoDetail = parsedError?.error?.details?.find(d => d['@type'] === 'type.googleapis.com/google.rpc.ErrorInfo');
+                            const retryDelayString = errorInfoDetail?.metadata?.retryDelay;
+
+                            if (retryDelayString) {
+                                const delaySeconds = parseInt(retryDelayString); // e.g., "60s" -> 60
+                                if (!isNaN(delaySeconds) && delaySeconds > 0) {
+                                    if(playInsightButtonEl) playInsightButtonEl.textContent = `Retry in ${delaySeconds}s`;
+                                    // Button is already disabled from "Buffering..."
+                                    setTimeout(() => {
+                                        if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
+                                        if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                                    }, delaySeconds * 1000);
+                                    // We don't throw an error here, just return, as the button state is managed.
+                                    return; 
+                                }
+                            }
+                        } catch (parseError) {
+                            console.error("[DEBUG] Could not parse 429 error details or retryDelay:", parseError);
+                        }
+                    }
+                    // For other errors, or if 429 parsing failed to find retryDelay
+                    throw new Error(`TTS API Error: ${response.status}. Check console for details.`);
                 }
 
                 // Expect a JSON response with embedded audio data
@@ -989,7 +1104,20 @@
                     };
 
                     currentInsightAudio.onerror = (e) => {
-                        console.error("Audio element error:", e, "Source (first 100 chars):", audioSourceUrl.substring(0,100));
+                        const playAttemptError = e.detail?.originalError; // Check for error passed from oncanplaythrough's catch
+                        const mediaError = currentInsightAudio.error; // Standard HTMLMediaElement error
+                        let errorMessage = "Unknown audio error";
+
+                        if (playAttemptError) {
+                            errorMessage = playAttemptError.message || "Failed to play audio after loading.";
+                            console.error("Audio element error (API fetch, play() failed):", playAttemptError, "Source:", audioSourceUrl.substring(0,100));
+                        } else if (mediaError) {
+                            errorMessage = mediaError.message || `MediaError code ${mediaError.code}`;
+                            console.error("Audio element error (API fetch, HTMLMediaElement error):", mediaError, "Source:", audioSourceUrl.substring(0,100));
+                        } else {
+                            console.error("Audio element error (API fetch, unknown type):", e, "Source:", audioSourceUrl.substring(0,100));
+                        }
+
                         if(playInsightButtonEl) playInsightButtonEl.textContent = "Play";
                         if(playInsightButtonEl) playInsightButtonEl.disabled = false;
                         if (isObjectUrl) {
@@ -997,10 +1125,25 @@
                         }
                         alert("Error playing audio. Check console. API MIME: " + apiMimeType);
                     };
-
-                    await currentInsightAudio.play(); // play() returns a Promise
-                    if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop";
-                    if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                    
+                    // Button is already "Buffering..." from before the fetch.
+                    // Playback will be initiated by oncanplaythrough.
+                    currentInsightAudio.oncanplaythrough = async () => {
+                        console.log('[DEBUG] API: canplaythrough event fired.');
+                        try {
+                            await currentInsightAudio.play();
+                            if(playInsightButtonEl) playInsightButtonEl.textContent = "Stop";
+                            if(playInsightButtonEl) playInsightButtonEl.disabled = false;
+                        } catch (playError) {
+                            console.error("Error on play() after canplaythrough (API fetch):", playError);
+                            if (currentInsightAudio.dispatchEvent) { // Trigger the main onerror handler
+                                const errorEvent = new CustomEvent('error', { detail: { originalError: playError } });
+                                currentInsightAudio.dispatchEvent(errorEvent);
+                            }
+                        }
+                    };
+                    currentInsightAudio.src = audioSourceUrl; // Set src after attaching handlers
+                    currentInsightAudio.load(); // Call load
 
                 } else { 
                     console.error("[DEBUG] No audio content found in expected part of the JSON response:", data);
@@ -1267,6 +1410,17 @@
                  }
             }
         });
+        voiceSelectEl.addEventListener('change', (event) => {
+            config.selectedVoice = event.target.value;
+            // Clear cached audio as the voice has changed
+            if (config.insightReport) {
+                config.insightReport.cachedAudioBase64 = null;
+                config.insightReport.cachedAudioMimeType = null;
+                config.insightReport.cachedAudioRequiresWavWrapping = false;
+                console.log('[DEBUG] Voice changed, audio cache cleared.');
+            }
+            localStorage.setItem('btcTrackConfig', JSON.stringify(config));
+        });
 
         insightsButtonEl.addEventListener('click', handleInsightsButtonClick);
         document.getElementById('closeInsightButton').addEventListener('click', () => toggleInsightModal(false));
@@ -1440,6 +1594,7 @@
 
         // Initial Load
         document.addEventListener('DOMContentLoaded', () => {
+            populateVoiceDropdown();
             loadConfig();
             applyAccentColor();
             if (!config.apiKey) {
